--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@slack/bolt": "^3.13.1",
     "@slack/socket-mode": "^1.3.2",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
