--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "@slack/bolt": "^3.13.1",
     "@slack/socket-mode": "^1.3.2",
     "csv-parser": "^3.0.0",
@@ -18,7 +19,8 @@
     "dotenv": "^16.0.3",
     "mongoose": "^7.2.0",
     "node-cron": "^3.0.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prisma": "^4.14.1"
   },
   "devDependencies": {
     "eslint": "^8.41.0",
